# rust_cmake_example

./: .gitignore  .gitmodules  CMakeLists.txt  build.cmd  clean.cmd  main.c  test_all.py
foobar/: Cargo.toml
foobar/src/: bin.rs  lib.rs
